replaced System.out.println() with println() Added hex fibonacci stream test